docs(note): 批次59 报告 + optimizations.md 批次59 节 + build.md 踩坑（-proc:full / codec-base / EmbeddedChannel 装配序）